# CoreVideo

./: .gitignore  CMakeLists.txt  README.md  site-worker.js
.github/workflows/: build.yml  codeql.yml  deploy-site.yml  release-windows.yml  security-scan.yml
companion/: COMPANION_INTEGRATION.md
companion/companion-module-corevideo-obs/: package.json  tsconfig.json  vitest.config.ts
companion/companion-module-corevideo-obs/src/: actions.ts  config.ts  feedbacks.ts  index.ts  state.test.ts  state.ts  variables.ts
data/locale/: en-US.ini
docs/: CORE_PLUGIN_FUNCTIONALITY.md  GPU_TEXTURE_SHARING_RESEARCH.md  OPERATOR_QUICKSTART.md  PRODUCTION_CONSOLE_ARCHITECTURE.md  PRODUCT_ROADMAP.md  RELEASE_CHECKLIST.md  ROADMAP.md  VALIDATION_MATRIX.md  ZOOM_MARKETPLACE_OAUTH.md  index.html
docs/policies/: data-retention-protection-policy.md  privacy-policy.md  security-policy.md
engine/src/: engine-audio.cpp  engine-audio.h  engine-share.cpp  engine-share.h  engine-video.cpp  engine-video.h  engine-writer.h  main.cpp
iamfatness-website/: README.md  package.json  push-to-website-repo.sh  site-worker.js  wrangler.jsonc
iamfatness-website/.github/workflows/: deploy-site.yml
iamfatness-website/public/: 404.html  CNAME  index.html
iamfatness-website/public/assets/: site.css
installer/: corevideo.nsi
public/: index.html
public/Privacy-Policy/: index.html
public/Support/: index.html
public/Terms-of-Use/: index.html
public/assets/: site.css
public/core-plugin/: index.html
public/docs/: index.html
public/documentation/: index.html
public/oauth/: index.html
public/privacy/: index.html
public/privacy-policy/: index.html
public/pro/: index.html
public/pro/documentation/: index.html
public/support/: index.html
public/terms/: index.html
public/terms-of-use/: index.html
scripts/: Measure-CoreVideoLoad.ps1  Test-CoreVideoPackage.ps1  build-site.mjs  obs-scene-smoke-test.ps1  release-local.ps1  summarize-cppcheck-quality.py
sidecar/: CMakeLists.txt
sidecar/src/: look-library.cpp  look-panel.cpp  look-panel.h  look-render-plan.cpp  look-render-plan.h  look.h  lower-third-controller.cpp  main.cpp  mainwindow.cpp  mainwindow.h  me-bus.cpp  me-bus.h  obs-audit-report.cpp  obs-audit-report.h  obs-client.cpp  obs-client.h  obs-live-validator.cpp  obs-live-validator.h  obs-look-renderer.cpp  obs-look-renderer.h  preview-canvas.cpp  preview-canvas.h  sidecar-control-server.cpp  template-manager.cpp  zoom-control-client.cpp  zoom-control-client.h
sidecar/tests/: lower-third-test.cpp  obs-audit-report-test.cpp  obs-audit-test.cpp  renderer-config-test.cpp
src/: engine-ipc.h  hw-video-pipeline.cpp  oauth-callback-helper.cpp  obs-utils.cpp  plugin-main.cpp  speaker-director.cpp  speaker-director.h  zoom-audio-router.cpp  zoom-auth.cpp  zoom-control-server.cpp  zoom-control-server.h  zoom-credentials.h.in  zoom-diagnostics-dialog.cpp  zoom-diagnostics-dialog.h  zoom-dock.cpp  zoom-dock.h  zoom-engine-client.cpp  zoom-engine-client.h  zoom-iso-panel.cpp  zoom-iso-panel.h  zoom-iso-recorder.cpp  zoom-iso-recorder.h  zoom-meeting.cpp  zoom-oauth.cpp  zoom-oauth.h  zoom-osc-server.cpp  zoom-osc-server.h  zoom-output-dialog.cpp  zoom-output-dialog.h  zoom-output-health.h  zoom-output-manager.cpp  zoom-output-manager.h  zoom-output-profile.cpp  zoom-output-profile.h  zoom-participant-audio-source.cpp  zoom-participant-audio-source.h  zoom-participants.cpp  zoom-reconnect.cpp  zoom-reconnect.h  zoom-settings-dialog.cpp  (+8 more)
tests/: ipc-line-io-test.cpp  join-input-test.cpp  output-health-test.cpp  speaker-director-test.cpp
tools/: zoom-sdk-auth-probe.cpp
wiki/: Home.md  Privacy-Policy.md  Support.md
